--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
 
                 <div class="home__social">
-                    <a href="https://www.linkedin.com/in/abhiverse01/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://www.linkedin.com/in/theabhishekshah/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
                     <a href="https://www.facebook.com/1lord001" class="home__social-icon"><i class='bx bxl-facebook' ></i></a>
                     <a href="https://www.instagram.com/i_abhiverse/" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
