Add hero image section to index.html

--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
                     </div>
                 </div>
             </div>
+            <div class="hero-image-wrapper reveal">
+                <div class="hero-image-frame">
+                    <img src="assets/hero-photo.png" alt="AbhiShek Shah - AI Engineer" class="hero-image">
+                    <div class="hero-image-overlay"></div>
+                </div>
+            </div>
         </section>
 
         <!-- About Section -->
