Refactor index.html to remove hero image
Removed hero image section and updated about section image.

--- a/index.html
+++ b/index.html
@@ -93,12 +93,6 @@
                     </div>
                 </div>
             </div>
-            <div class="hero-image-wrapper reveal">
-                <div class="hero-image-frame">
-                    <img src="assets/hero-photo.png" alt="AbhiShek Shah - AI Engineer" class="hero-image">
-                    <div class="hero-image-overlay"></div>
-                </div>
-            </div>
         </section>
 
         <!-- About Section -->
@@ -112,11 +106,7 @@
             <div class="about-grid">
                 <div class="about-image reveal">
                     <div class="about-image-frame">
-                        <div class="about-image-placeholder">
-                            <div class="avatar-circle">
-                                <span class="avatar-initials">AS</span>
-                            </div>
-                        </div>
+                        <img src="assets/hero-photo.png" alt="AbhiShek Shah" class="about-photo">
                     </div>
                     <div class="about-credentials">
                         <div class="credential-badge">
@@ -145,7 +135,7 @@
                         My expertise spans the full spectrum of AI/ML development—from building Recommender Systems and deploying scalable AI solutions on cloud infrastructure, to fine-tuning Large Language Models for specialized applications. I bridge the gap between cutting-edge research and production-ready systems.
                     </p>
                     <p>
-                        Beyond AI, I've developed numerous Python applications, games, and tools including PySnake, BlackJack, and various GUI applications. I've also built interactive web games using HTML, CSS, and JavaScript. Currently researching ActFormers—modifying transformers to predict actions rather than just tokens.
+                        Beyond AI, I've developed numerous Python applications, games, and tools, including PySnake, BlackJack, and various GUI applications. I've also built interactive web games using HTML, CSS, and JavaScript. Currently researching ActFormers—modifying transformers to predict actions rather than just tokens.
                     </p>
 
                     <div class="about-highlights">
